--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                   <i class="fa fa-linkedin"></i>
                 </button>
               </a>
-              <a href="https://github.com/Prishads" target="_blank">
+              <a href="https://github.com/prishadsinghania" target="_blank">
                 <button class="icon-btn github">
                   <i class="fa fa-github"></i>
                 </button>
@@ -931,7 +931,7 @@ strengthening security by 10%
             data-position="top" data-tooltip="View Prisha on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
               aria-label="Prisha on Github" href="https://github.com/Prishads" class="hoverline"
-              target="_blank">https://github.com/Prishads</a></a>
+              target="_blank">https://github.com/prishadsinghania</a></a>
         </p>
         <p>
           <a aria-label="View Prisha on LinkedIn" href="https://www.linkedin.com/in/prisha-singhania-ab9448224/" target="_blank"
