Update3 index.html

--- a/index.html
+++ b/index.html
@@ -930,7 +930,7 @@ strengthening security by 10%
           <a aria-label="View Prisha on GitHub" href="https://github.com/Prishads" target="_blank"
             data-position="top" data-tooltip="View Prisha on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Prisha on Github" href="https://github.com/Prishads" class="hoverline"
+              aria-label="Prisha on Github" href="https://github.com/prishadsinghania" class="hoverline"
               target="_blank">https://github.com/prishadsinghania</a></a>
         </p>
         <p>
