Update4 index.html

--- a/index.html
+++ b/index.html
@@ -927,7 +927,7 @@ strengthening security by 10%
               class="hoverline">prishadsinghania@gmail.com</a></a>
         </p>
         <p>
-          <a aria-label="View Prisha on GitHub" href="https://github.com/Prishads" target="_blank"
+          <a aria-label="View Prisha on GitHub" href="https://github.com/prishadsinghania" target="_blank"
             data-position="top" data-tooltip="View Prisha on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
               aria-label="Prisha on Github" href="https://github.com/prishadsinghania" class="hoverline"
