Update5 index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Prisha Dipesh Singhania" />
-  <meta property="og:description" content="Data Analyst" />
+  <meta property="og:description" content="" />
   <meta property="og:url" content="https://github.com/Prishads/prishadsinghania.github.io" />
   <meta property="og:site_name" content="Prisha Dipesh Singhania" />
   <meta property="article:publisher" content="https://github.com/Prishads/prishadsinghania.github.io" />
