--- a/index.html
+++ b/index.html
@@ -948,7 +948,7 @@ strengthening security by 10%
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Engineer", "Solution Oriented", "Fast Learner"],
+      strings: ["Resourceful Engineer", "Solution Oriented", "Fast Learner"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
