--- a/index.html
+++ b/index.html
@@ -347,6 +347,35 @@ strengthening security by 10%
           </div>
         </div>
 
+        <div class="card">
+          <div class="card-content">
+            <div class="row">
+              <div class="col s12 m2">
+                <a href="https://giesbusiness.illinois.edu/course/FIN/555" target="_blank"><img alt="FIN 555"
+                    src="/assets/img/dres.jpeg.png" class="responsive-img center-block" /></a>
+              </div>
+              <!-- <div class="col s12 m10"> -->
+              <div class="col s12 m10">
+                <p>
+                  <span class="card-title"><a href="https://giesbusiness.illinois.edu/course/FIN/555" target="_blank"
+                      class="teal-text hoverline">Gies College of Business, UIUC</a></span>
+                </p>
+              </div>
+            </div>
+            <div class="role brown-text text-darken-2">Graduate Grading Assistant</div>
+            <ul>
+              <li>Assess coursework and exams for the "FIN 555 - Financial Innovation" class, focusing on evaluating comprehension of AI in Finance, blockchain, and cryptocurrency technologies</li>
+              <li>Deliver comprehensive, insightful feedback to students, promoting deeper knowledge of innovative financial systems and cutting-edge technological advancements</li>
+              <li>
+                <b>Tools: Canvas, Fintech, AI in Finance </b>
+              </li>
+            </ul>
+          </div>
+          <div class="card-action">
+            <span>January 2025 - Present | Champaign, USA</span>
+          </div>
+        </div>
+
         
         <div class="card">
           <div class="card-content">
