--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1TRsTiUvTAFmGLWjolKHaAfmzVB-Z4DLk/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Prisha's resume in a new tab" href="https://drive.google.com/file/d/154JfQD4b6mEQta1CutQL0NXDy6NYgY2i/view?usp=sharing" target="_blank"
+        <a aria-label="Open Prisha's resume in a new tab" href="https://drive.google.com/file/d/1TRsTiUvTAFmGLWjolKHaAfmzVB-Z4DLk/view?usp=sharing" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
@@ -193,7 +193,7 @@
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
       <li class="bold">
-        <a aria-label="Open Varad's Resume in a new tab"
+        <a aria-label="Open Prisha's Resume in a new tab"
           href="https://drive.google.com/file/d/1TRsTiUvTAFmGLWjolKHaAfmzVB-Z4DLk/view?usp=sharing" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
@@ -324,7 +324,7 @@ When I am not troubleshooting python scripts, creating dashboards, or completing
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Research and Development Intern</div>
+            <div class="role brown-text text-darken-2">Data Analyst Intern</div>
             <ul>
               <li>
                 Built proficiency in SQL, asp.NET, and C# through foundational projects, improving backend functionality, database
@@ -338,7 +338,7 @@ strengthening security by 10%
               <li>Led a research team of 5 interns, serving as the main liaison between the Manager and interns to facilitate clear
                 communication and project alignment</li>
               <li>
-                <b>Tools: Python, asp.NET, SQL, React, Javascript</b>>
+                <b>Tools: Python, asp.NET, SQL, React, Javascript</b>
               </li>
             </ul>
           </div>
@@ -352,13 +352,13 @@ strengthening security by 10%
             <div class="row">
               <div class="col s12 m2">
                 <a href="https://giesbusiness.illinois.edu/course/FIN/555" target="_blank"><img alt="FIN 555"
-                    src="/assets/img/dres.jpeg.png" class="responsive-img center-block" /></a>
+                    src="/assets/img/images.png" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://giesbusiness.illinois.edu/course/FIN/555" target="_blank"
-                      class="teal-text hoverline">Gies College of Business, UIUC</a></span>
+                      class="teal-text hoverline">Gies College of Business</a></span>
                 </p>
               </div>
             </div>
@@ -419,6 +419,42 @@ strengthening security by 10%
       <h3 class="page-title white-text teal">Projects</h3>
       <div class="container">
         <div class="row">
+
+          <div class="col s12 m6 l4">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img alt="quiz app" src="/assets/img/freepik__a-futuristic-ai-music-genre-classifier-interface-n__13895.jpg" style="height: 100%; width: 100%" class="activator" />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator teal-text hoverline">Music Genre Classifier<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  CRNN model implementation to identify the Genre of an audio file
+                </p>
+              </div>
+              <div class="card-reveal">
+                <!-- TODO: change this -- only close button -->
+                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
+                <span class="card-title grey-text"><small>Accomplishments</small><i
+                    class="mdi-navigation-close right"></i></span>
+                <ul>
+                  
+                  <li>Developed a CRNN model, achieving 78.13% classification accuracy on a 10-class music genre dataset</li>
+                  <li>Pre-processed images, optimized model performance and accelerated training process using Keras, tensorflow</li>
+                </ul>
+                <div class="card-action">
+                  <!--<a aria-label="Visit " href="https://quiz-up-app.herokuapp.com/" target="_blank" data-position="top"
+                    data-tooltip="View Online"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="fa fa-external-link"></i></a>
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/QuizUp"
+                    target="_blank" data-position="top" data-tooltip="View Source"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="fa fa-github"></i></a>-->
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="col s12 m6 l4">
             <div class="card medium">
