--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1TRsTiUvTAFmGLWjolKHaAfmzVB-Z4DLk/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Prisha's blog site in a new tab" href="https://medium.com/@prishadsinghania" target="_blank"
+        <a aria-label="Open Prisha's resume in a new tab" href="https://medium.com/@prishadsinghania" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Blogs</span></a>  
       </li>
     </ul>
