Added Blogs index.html

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1TRsTiUvTAFmGLWjolKHaAfmzVB-Z4DLk/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Prisha's resume in a new tab" href="https://drive.google.com/file/d/1TRsTiUvTAFmGLWjolKHaAfmzVB-Z4DLk/view?usp=sharing" target="_blank"
+        <a aria-label="Open Prisha's resume in a new tab" href="https://drive.google.com/file/d/1kcoebT2dEZvDbFnLEwoJr1OYQ_TjSiRA/view?usp=share_link" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
 
@@ -162,9 +162,9 @@
         -->
         <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1TRsTiUvTAFmGLWjolKHaAfmzVB-Z4DLk/view?usp=sharing')"
-          class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
+          class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> 
         <a aria-label="Open Prisha's resume in a new tab" href="https://medium.com/@prishadsinghania" target="_blank"
-        class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Blogs</span></a>  
+        class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Blogs</span></a>  -->
       </li>
     </ul>
   </nav>
@@ -259,7 +259,7 @@
             </div>
             <div class='buttons'>
               <a href="#about" class="readme">Read More</a>
-              <a href="#contact" class="contactme">Contact Me</a>
+              <a href="https://medium.com/@prishadsinghania" target="_blank" class="contactme">My Blogs</a>
             </div>
           </div>
         </div>
@@ -380,15 +380,15 @@ strengthening security by 10%
             </div>
             <div class="role brown-text text-darken-2">Graduate Grading Assistant</div>
             <ul>
-              <li>Assess coursework and exams for the "FIN 555 - Financial Innovation" class, focusing on evaluating comprehension of AI in Finance, blockchain, and cryptocurrency technologies</li>
-              <li>Deliver comprehensive, insightful feedback to students, promoting deeper knowledge of innovative financial systems and cutting-edge technological advancements</li>
+              <li>Assessed coursework and exams for the "FIN 555 - Financial Innovation" class, focusing on evaluating comprehension of AI in Finance, blockchain, and cryptocurrency technologies</li>
+              <li>Delivered comprehensive, insightful feedback to students, promoting deeper knowledge of innovative financial systems and cutting-edge technological advancements</li>
               <li>
                 <b>Tools: Canvas, Fintech, AI in Finance </b>
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>January 2025 - Present | Champaign, USA</span>
+            <span>January - May, 2025 | Champaign, USA</span>
           </div>
         </div>
 
@@ -411,19 +411,19 @@ strengthening security by 10%
             <div class="role brown-text text-darken-2">Captioning Assistant</div>
             <ul>
               <li>
-                Produce subtitles for educational videos, supporting accessibility for international and hearing-impaired students
+                Produced subtitles for educational videos, supporting accessibility for international and hearing-impaired students
               </li>
               <li>
-                Ensure 99% subtitle accuracy using MediaSpace and Subtitle Edit software, enhancing content comprehension
+                Ensured 99% subtitle accuracy using MediaSpace and Subtitle Edit software, enhancing content comprehension
               </li>
-              <li>Collaborate with a team of 10 people to optimize workflows and ensure timely delivery of high-priority video content</li>
+              <li>Collaborated with a team of 10 people to optimize workflows and ensure timely delivery of high-priority video content</li>
               <li>
                 <b>Tools: Subtitle Edit, Mediaspace, Basecamp </b>
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>August 2024 - Present | Champaign, USA</span>
+            <span>August - December, 2024 | Champaign, USA</span>
           </div>
         </div>
 
@@ -803,6 +803,9 @@ strengthening security by 10%
             <h4 class="brown-text light">Tools & Technologies</h4>
             <div class="row text-center">
               <div class="col s4 m2">
+                <img alt="" src="/assets/img/aws.png" class="responsive-img" />AWS
+              </div>
+              <div class="col s4 m2">
                 <img alt="" src="/assets/img/numpy-logo-1-500x500.jpg" class="responsive-img" />NumPy
               </div>
               <div class="col s4 m2">
@@ -868,9 +871,9 @@ strengthening security by 10%
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/databricks-logo.png" class="responsive-img" />Databricks
               </div>
-              <div class="col s4 m2">
+              <!--<div class="col s4 m2">
                 <img alt="" src="/assets/img/aws.png" class="responsive-img" />AWS
-              </div>
+              </div>-->
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/heroku.png" class="responsive-img" />Heroku
               </div>
@@ -932,23 +935,25 @@ strengthening security by 10%
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://illinois.edu" target="_blank" class="teal-text hoverline">University of Illinois Urbana-Champaign</a></span>
+                  <span class="card-title"><a href="https://illinois.edu" target="_blank" class="teal-text hoverline">University of Illinois at Urbana-Champaign</a></span>
                 </p>
                 <p class="brown-text">Champaign, Illinois, USA</p>
                 <p>
-                  <b>Degree: </b>MS in Information Management      
+                  <b>Degree: </b>Master's in Information Management      
                   <br>
-                  <b>CGPA: </b>4.0/4.0
+                  <b>CGPA: </b>3.88/4.0
                 </p>
 
                 <ul>
                   <p>
-                    <b>Relevant Courseworks:</b>
+                    <b>Relevant Coursework:</b>
                   <ul>
                     <li>Data, Statistics, and Information</li>
                     <li>Data Warehousing and BI</li>
                     <li>Programming and Quality in Analytics</li>
-                    <li>Methods of Data Science</li>                    
+                    <li>Methods of Data Science</li>
+                    <li>Data Mining</li> 
+                    <li>Information Modeling</li>                     
                   </ul>
                   </p>
 
@@ -973,7 +978,7 @@ strengthening security by 10%
 
                 <ul>
                   <p>
-                    <b>Relevant Courseworks:</b>
+                    <b>Relevant Coursework:</b>
                   <ul>
                     <li>Data Structures and Algorithms</li>
                     <li>Database Management Systems</li>
@@ -1012,7 +1017,7 @@ strengthening security by 10%
             data-position="top" data-tooltip="View Prisha on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
               aria-label="Prisha on Github" href="https://github.com/prishadsinghania" class="hoverline"
-              target="_blank">https://github.com/prishadsinghania</a></a>
+              target="_blank">github.com/prishadsinghania</a></a>
         </p>
         <p>
           <a aria-label="View Prisha on LinkedIn" href="https://www.linkedin.com/in/prisha-singhania-ab9448224/" target="_blank"
@@ -1020,6 +1025,13 @@ strengthening security by 10%
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
               class="fa fa-linkedin"></i><a aria-label="Prisha on LinkedIn" href="https://www.linkedin.com/in/prisha-singhania-ab9448224/"
               class="hoverline" target="_blank">linkedin.com/in/prishasinghania</a></a>
+        </p>
+        <p>
+          <a aria-label="View Prisha on Medium" href="https://medium.com/@prishadsinghania" target="_blank"
+            data-position="top" data-tooltip="View Prisha on Medium"
+            class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+              class="fa fa-medium"></i><a aria-label="Prisha on Medium" href="https://medium.com/@prishadsinghania"
+              class="hoverline" target="_blank">medium.com/@prishadsinghania</a></a>
         </p>
       </div>
     </section>
